About: Fix background text alignment

--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@
     background-repeat:no-repeat;
     margin: 1px auto;
 }
-#about p {
+#donate p {
     text-align:center;
     overflow: visible;
     white-space: normal;
